<resources>
    <string name="app_name">Hermitage Intelligence Agency</string>

    <!-- Menu overflow -->
    <string name="customise_title">Customise your quilt</string>
    <string name="scan_qr_code">Scan a QR Code</string>
    <string name="connect_quilt">Connect a Smart Quilt</string>

    <!-- form details -->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="unit_number">Unit Number</string>
    <string name="street_number">Street Number</string>
    <string name="street_name">Street Name</string>
    <string name="suburb">Suburb</string>
    <string name="postcode">Postcode</string>
    <string name="state">State</string>

    <string name="fabric_c">Fabric</string>
    <string name="filling_c">Filling</string>
    <string name="size_c">Size</string>
    <string name="gsm_c">GSM</string>

    <!-- Tabs -->
    <string name="newsletter">Newsletter</string>
    <string name="smart_quilt">Smart Quilt</string>

    <!-- Button -->
    <string name="btn_next">Next</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_rewiew">Review</string>
    <string name="btn_temp">Temperature</string>
    <string name="btn_humi">Humidity</string>

    <!-- All titles -->
    <string name="title_quilt">Select Quilt Attributes</string>
    <string name="title_address">Please Enter Address Details</string>
    <string name="title_confirm">Order Review</string>
    <string name="title_quilt_list">Select a quilt</string>
    <string name="title_personal_details">Personal Details</string>
    <string name="title_selected_quilt">Selected Quilt</string>

    <!--Toast or snackbar-->
    <string name="invalid_qrcode">Invalid QR-Code</string>
    <string name="no_smartquilt">Smart Quilt Unavailable</string>
    <string name="invalid_selection">Please select an option</string>
    <string name="graph_fragment">Graph fragment</string>
    <string name="news_fragment">News fragment</string>

    <!-- dropdown menus -->
    <string-array name="array_states">
        <item>Select State</item>
        <item>Victoria</item>
        <item>New South Wales</item>
        <item>Queensland</item>
        <item>Tasmania</item>
        <item>Western Australia</item>
        <item>South Australia</item>
    </string-array>

    <string-array name="array_size">
        <item>Select Size</item>
        <item>King - 220*240</item>
        <item>Queen - 200*230</item>
        <item>Double - 180*210</item>
        <item>Single - 150*210</item>
    </string-array>

    <string-array name="array_fabric">
        <item>Select Fabric</item>
        <item>Egyptian Cotton</item>
        <item>Cuprammonium Rayon</item>
    </string-array>

    <string-array name="array_filling">
        <item>Select Filling</item>
        <item>Downs Wool</item>
        <item>Alpaca Fleece</item>
        <item>70% Downs + 30% Merino</item>
    </string-array>

    <string-array name="array_gsm">
        <item>Select GSM</item>
        <item>300gsm</item>
        <item>500gsm</item>
        <item>600gsm</item>
    </string-array>

    <!-- The different string for the fake quilt list -->
    <string name="quilt_connected">Connected quilt:</string>
    <string name="quilt_not_connected">Not connected quilt:</string>
    <string name="quilt_fake1">Bedroom 1 Quilt</string>
    <string name="quilt_fake2">Bedroom 2 Quilt</string>
    <string name="quilt_fake3">Bedroom 3 Quilt</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
