<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryDarkColor">

    <ImageButton
        android:id="@+id/btnScanQR1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/scan_qr_code"
        android:cropToPadding="false"
        android:tint="@android:color/transparent"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/btnScanQR2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_camera"
        tools:padding="2dp" />

    <Button
        android:id="@+id/btnScanQR2"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="100dp"
        android:background="@android:color/transparent"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/scan_qr_code"
        android:textAlignment="textStart"
        android:textColor="@color/secondaryColor"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/btnScanQR1"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnConnectQuilt1"
        android:contentDescription="@string/connect_quilt"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="70dp"
        android:background="@android:color/transparent"
        android:backgroundTint="@android:color/transparent"
        android:tint="@android:color/transparent"
        app:layout_constraintEnd_toStartOf="@+id/btnConnectQuilt2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnScanQR1"
        app:srcCompat="@android:drawable/stat_sys_data_bluetooth" />

    <Button
        android:id="@+id/btnConnectQuilt2"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:layout_marginTop="70dp"
        android:background="@android:color/transparent"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/connect_quilt"
        android:textAlignment="textStart"
        android:textColor="@color/secondaryColor"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/btnConnectQuilt1"
        app:layout_constraintTop_toBottomOf="@+id/btnScanQR2" />

    <ImageButton
        android:id="@+id/btnNewsletter1"
        android:contentDescription="@string/connect_quilt"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="70dp"
        android:background="@android:color/transparent"
        android:backgroundTint="@android:color/transparent"
        android:tint="@android:color/transparent"
        app:layout_constraintEnd_toStartOf="@+id/btnNewsletter2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConnectQuilt1"
        app:srcCompat="@android:drawable/ic_dialog_email" />

    <Button
        android:id="@+id/btnNewsletter2"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:layout_marginTop="70dp"
        android:background="@android:color/transparent"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/newsletter"
        android:textAlignment="textStart"
        android:textColor="@color/secondaryColor"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/btnNewsletter1"
        app:layout_constraintTop_toBottomOf="@+id/btnConnectQuilt2" />

</android.support.constraint.ConstraintLayout>